[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/enemy_template.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.44356, 6.40264 )

[node name="enemy_template" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Raycasts_corners" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -8, 6 )

[node name="check_corner_left" type="RayCast2D" parent="Raycasts_corners"]
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 6

[node name="check_corner_right" type="RayCast2D" parent="Raycasts_corners"]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 6

[node name="Raycasts_walls" type="Node2D" parent="."]
editor/display_folded = true

[node name="check_wall_left" type="RayCast2D" parent="Raycasts_walls"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( -3, 0 )
collision_mask = 6

[node name="check_wall_right" type="RayCast2D" parent="Raycasts_walls"]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 3, 0 )
collision_mask = 6

[node name="Control" type="Control" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 15.133
margin_top = -0.801121
margin_right = 25.133
margin_bottom = 13.1989

